--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,26 @@
     font-family: 'OpenSans-Regular', sans-serif;
     font-family: 'OpenSans-Semibold', sans-serif;
     font-family: 'OpenSans-Bold', sans-serif; */
+
+ul, li {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-bar {
+    padding: 20px 0;
+    color: #212121;
+}
+.menu__item {
+    margin-left: 37px;
+}
+.menu__item a {
+    font-family: 'OpenSans-Semibold';
+    font-size: 20px;
+    text-decoration: none;
+    color: #212121;
+}
+.menu__item a:hover {
+    color: #7d7d7d;
+}
