--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ ul, li {
 .menu__item a:hover {
     color: #7d7d7d;
 }
-.header > div {
+.header {
     color: #fff;
     text-align: center;
     padding: 180px 0;
@@ -61,21 +61,16 @@ ul, li {
 .button {
     padding: 10px 25px;
     margin: 0 10px;
+    text-transform: uppercase;
     color: #fff;
-    transition: 0.3s;
-}
-.button_empty {
-    background: transparent;
-    border: 2px solid #fff;
-}
-.button_full {
     background: #00897b;
     border: 2px solid #00897b;
+    cursor: pointer;
+    transition: 0.3s;
 }
-.button_empty:hover,
-.button_full:hover {
-    border: 2px dotted #fff;
-    background: #00574e;
+.button:hover {
+    background: transparent;
+    border: 2px solid #fff;
 }
 .about {
     padding: 120px 0 125px;
@@ -146,5 +141,31 @@ ul, li {
     color: #000;
     background: transparent;
     transition: 0.5s;
+}
+.portfolio {
+    padding: 120px 0 135px;
+    text-align: center;
+}
+.portfolio button:hover {
+    color: #000;
+    border: 2px solid #00897b;
+    /* background: transparent; */
+}
+.portfolio img {
+    object-fit: cover;
+    margin-bottom: 30px;
+}
+.filter {
+    padding: 120px 0;
+}
+.justify-content-center {
+}
+.col-xl-8 {
+}
+.about__title {
+}
+.about__text {
+}
+.about__text-title {
 }
 
