--- a/css/style.css
+++ b/css/style.css
@@ -146,17 +146,37 @@ ul, li {
     padding: 120px 0 135px;
     text-align: center;
 }
-.portfolio button:hover {
+.portfolio button:hover,
+.focused {
     color: #000;
     border: 2px solid #00897b;
-    /* background: transparent; */
+    background: transparent;
 }
 .portfolio img {
-    object-fit: cover;
     margin-bottom: 30px;
 }
 .filter {
     padding: 120px 0;
+}
+div[filter] {
+    position: relative;
+}
+div[filter]:hover img {
+    filter: brightness(50%);
+    transition: 0.3s;
+}
+.text {
+    display: none;
+}
+div[filter]:hover .text {
+    display: block;
+    width: 100%;
+    color: #fff;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    z-index: 3;
+    text-align: center;
 }
 .justify-content-center {
 }
