--- a/css/style.css
+++ b/css/style.css
@@ -178,14 +178,63 @@ div[filter]:hover .text {
     z-index: 3;
     text-align: center;
 }
-.justify-content-center {
+.pricing {
+    padding: 165px 0 125px;
+    background: #f0f1f1;
+    text-align: center;
 }
-.col-xl-8 {
+.price {
+    background: #fff;
+    transition: 0.3s;
 }
-.about__title {
+.price:hover {
+    box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.39);
 }
-.about__text {
+.price__head {
+    padding: 40px 0 65px;
+    font-size: 50px;
+    color: #fff;
+    background-image: url(../img/price_bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 236px;
 }
-.about__text-title {
+.price__head p {
+    font-size: 25px;
 }
-
+.price__head sub {
+    font-size: 17px;
+    vertical-align: middle;
+}
+.price__head sup {
+    font-size: 25px;
+    vertical-align: middle;
+}
+.price__body {
+    font-size: 17px;
+    color: #212121;
+}
+.price__body ul li {
+    padding: 28px 0 12px;
+    margin: 0 auto;
+    max-width: 175px;
+    border-bottom: 1px solid #bfbfbf;
+}
+.price__footer {
+    padding: 60px 0;
+}
+.price__footer button {
+    cursor: pointer;
+    padding: 12px 35px;
+    font-size: 20px;
+    color: #212121;
+    background: transparent;
+    border: 2px solid #212121;
+    transition: 0.7s;
+}
+.price__footer button:hover {
+    text-transform: uppercase;
+    color: #fff;
+    background: #00897b;
+    border: none;
+}
