--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,8 @@ div[filter]:hover .text {
 }
 .price__footer button {
     cursor: pointer;
-    padding: 12px 35px;
+    width: 160px;
+    height: 60px;
     font-size: 20px;
     color: #212121;
     background: transparent;
@@ -237,4 +238,60 @@ div[filter]:hover .text {
     color: #fff;
     background: #00897b;
     border: none;
+}
+.team {
+    padding: 165px 0 125px;
+    background: #fff;
+    text-align: center;
+}
+.team h4 {
+    margin-top: 30px;
+    font-size: 20px;
+    font-family: 'OpenSans-Semibold';
+}
+.team p {
+    margin-bottom: 30px;
+    font-size: 15px;
+}
+.icons {
+    display: flex;
+    justify-content: center;
+}
+.icons a i {
+    transition: 0.3s;
+}
+.icons i:nth-child(1) {
+    color:#f0f1f1
+}
+.icons i:nth-child(2) {
+    color: #00897b;
+}
+.icons a:hover i:nth-child(1) {
+    color: #3949ab
+}
+.icons a:hover i:nth-child(2) {
+    color: #fff;
+}
+.multiple-items {
+    margin-top: 125px;
+}
+.multiple-items img {
+    margin: 0 auto;
+}
+.dots-style {
+    margin-top: 115px;
+    display: flex;
+    justify-content: center;
+}
+.dots-style button {
+    background: #00897b;
+    border: none;
+    border-radius: 50%;
+    font-size: 0;
+    height: 15px;
+    width: 15px;
+    margin: 5px;
+}
+.dots-style li[class="slick-active"] button {
+    background: #3949ab;
 }
